--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   
       <!-- Main CSS -->
       <link rel="stylesheet" href="assets/css/style.css">
+      <link rel="stylesheet" href="assets/css/toastr.css">
   
   
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
