--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
   <app-root></app-root>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
    <!-- jQuery -->
    <script src="assets/js/jquery.min.js "></script>
 
